<resources>
    <string name="app_name">Kraken</string>

    <string name="title_activity_mix">Mix</string>
    <string name="title_activity_sample">List of samples</string>
    <string name="title_activity_broadcast_graph">Broadcast graph</string>

    <!-- Join group -->
    <string name="avgrp">Available group(s)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nogrp">No group available</string>
    <string name="groups">Retrieveing the groups from the server …</string>
    <string name="opfail">Cannot execute the requested operation</string>

    <string name="navigation_drawer_open">Open navigationr</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <!-- Actions -->
    <string name="action_update">Update</string>
    <string name="action_listen">Listen</string>
    <string name="action_stop">Stop</string>
    <string name="action_graph">Path</string>

    <string name="gunetwork">Cannot update the group content - network unavailable</string>

    <!-- Main Activity -->
    <string name="main_name">Name: </string>
    <string name="main_editname">Name</string>
    <string name="main_grp">Group: </string>
    <string name="main_editgrp">Group to create</string>
    <string name="main_play">Play Sound</string>

    <!-- Mix Activity -->
    <string name="mix_stereo">Stereo</string>
    <string name="mix_reverb">| Reverb</string>
    <string name="mix_gen">Generate Sound</string>
    <string name="mix_play">Play Sound</string>
    <string name="mix_list">List of samples</string>
    <string name="mix_clear">Clear</string>
    <string name="mix_broad">Broadcast</string>
    <string name="mix_listen">Listen</string>
    <string name="mix_rate">Rate: 0 bytes/s</string>

</resources>
