<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pl.multicast.kraken.GraphActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mix"
                android:textColor="#000000"
                android:textSize="32dp"/>-->

            <!-- Text views, edit text -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:orientation="vertical">

                <!-- Sample rate -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sample rate:"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/edit_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="8000"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <!-- Frequency -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Frequency (Hz):"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/edit_freq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="440"
                        android:inputType="numberDecimal" />

                </LinearLayout>

                <!-- Duration -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Duration (in second):"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/edit_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="10"
                        android:inputType="numberDecimal" />

                </LinearLayout>

            </LinearLayout>

            <!-- Checboxes, switches and buttons -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Checkbox and switches -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Stereo -->
                    <CheckBox
                        android:id="@+id/box_stereo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mix_stereo"
                        android:textSize="16dp" />

                    <!-- Generate and Play sound -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <!-- Buttons -->
                        <Button
                            android:id="@+id/button_config"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="generateSound"
                            android:text="@string/mix_gen"
                            android:textSize="10dp" />

                        <Button
                            android:id="@+id/button_gp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="play"
                            android:text="@string/mix_play"
                            android:textSize="12dp" />

                        <Button
                            android:id="@+id/button_playlist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mix_list"
                            android:onClick="displaylistOfSamples"
                            android:textSize="10dp" />

                        <Button
                            android:id="@+id/button_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mix_clear"
                            android:onClick="clearSamples"
                            android:textSize="10dp" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Switch
                android:id="@+id/switch_broad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="switchBroadcastOption"
                android:text="@string/mix_broad"
                android:textSize="16dp" />

            <Switch
                android:id="@+id/switch_listen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="switchListenOption"
                android:text="@string/mix_listen"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/text_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mix_rate"
                android:textSize="20dp" />

        </LinearLayout>
    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.pl.multicast.kraken.NavDrawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />

    <fragment
        android:id="@+id/navigation_drawerR"
        android:name="com.pl.multicast.kraken.NavDrawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        tools:layout="@layout/fragment_navigation_drawer" />


</android.support.v4.widget.DrawerLayout>
